# backend/swagger/swagger.json
@@ -2,7 +2,8 @@
     "swagger": "2.0",
     "info": {
         "title": "Finance manager",
-        "contact": {}
+        "contact": {},
+        "version": "0.0.1"
     },
     "paths": {
         "/auth/google_auth": {
@@ -13,6 +14,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "Auth"
                 ],
                 "summary": "Authenticate using a Google token",
                 "parameters": [
@@ -38,9 +42,6 @@
         }
     },
     "definitions": {
-        "data_structures.Email": {
-            "type": "object"
-        },
         "rest.TokenRequest": {
             "type": "object",
             "properties": {
@@ -65,7 +66,7 @@
                     "type": "string"
                 },
                 "userEmail": {
-                    "$ref": "#/definitions/data_structures.Email"
+                    "type": "string"
                 }
             }
         }
